hello-rosa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-rosa-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: hello-rosa 
      port:
        number: 8080
  rules:
  - host: hello-rosa.example.com
    http:
      paths:
      - backend:
          service:
            name: hello-rosa   
            port:
              number: 8080
        path: /
        pathType: Prefix
